[gd_scene load_steps=3 format=3 uid="uid://f5etvhwoyexb"]

[ext_resource type="Script" uid="uid://dsjwwsb4h771v" path="res://map/room.gd" id="1_tm1bn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l0b50"]
size = Vector3(2, 4, 1)

[node name="Room" type="Node3D"]
script = ExtResource("1_tm1bn")

[node name="Floor" type="CSGBox3D" parent="."]
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Floor3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Floor2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Ceil" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Walls" type="Node" parent="."]

[node name="Wall" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 5.25, 5, 0)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Wall7" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 5.25, 5, -10)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Wall6" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 5.25, 5, 10)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Wall2" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -5.25, 5, 0)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Wall8" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -5.25, 5, -10)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Wall5" type="CSGBox3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -5.25, 5, 10)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Wall3" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 5, 5.25)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Door3" type="CSGBox3D" parent="Walls/Wall3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
operation = 2
use_collision = true
size = Vector3(4, 0.5, 2)

[node name="Wall4" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 5, -5.25)
use_collision = true
size = Vector3(10, 0.5, 10)

[node name="Door3" type="CSGBox3D" parent="Walls/Wall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)
operation = 2
use_collision = true
size = Vector3(4, 0.5, 2)

[node name="Portals" type="Node" parent="."]

[node name="Portal" type="Area3D" parent="Portals"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Portals/Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 5)
shape = SubResource("BoxShape3D_l0b50")

[node name="Portal2" type="Area3D" parent="Portals"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Portals/Portal2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -5)
shape = SubResource("BoxShape3D_l0b50")

[connection signal="body_entered" from="Portals/Portal" to="." method="_on_portal_body_entered"]
[connection signal="body_exited" from="Portals/Portal" to="." method="_on_portal_body_exited"]
[connection signal="body_entered" from="Portals/Portal2" to="." method="_on_portal_2_body_entered"]
[connection signal="body_exited" from="Portals/Portal2" to="." method="_on_portal_2_body_exited"]
