extends Node3D

var teleported := false

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_portal_body_entered(body: Node3D) -> void:
	pass # Replace with function body.


func _on_portal_body_exited(body: Node3D) -> void:
	pass # Replace with function body.


func _on_portal_2_body_entered(body: Node3D) -> void:
	pass # Replace with function body.


func _on_portal_2_body_exited(body: Node3D) -> void:
	pass # Replace with function body.
